# OB

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.trae/rules/: tauri.md
docs/: plot-json.md  plot.example.json  plot.schema.json
python/: requirements.txt
scripts/: bench_python_stress.ps1  setup_ob_venv.ps1  smoke_test_plot_json.ps1  stress_test_originbridge.ps1
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: lib.rs
src-tauri/src/utils/: mod.rs  origin.rs  run_origin_job.py  settings.rs
